# mermaid

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md  gallery_build.rs  plan.md
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: gallery.md
assets/gallery/: architecture.md  block.md  c4.md  class.md  er.md  flowchart.md  gantt.md  gitgraph.md  journey.md  kanban.md  mindmap.md  packet.md  pie.md  quadrant.md  radar.md  requirement.md  sankey.md  sequence.md  state.md  timeline.md  treemap.md  xychart.md  zenuml.md
benches/: render.rs
benches/samples/: architecture.mmd  c4.mmd  class.mmd  flowchart.mmd  gantt.mmd  gitgraph.mmd  journey.mmd  kanban.mmd  quadrant.mmd  requirement.mmd  sankey.mmd  treemap.mmd  zenuml.mmd
crates/mermaid-parse/: Cargo.toml
crates/mermaid-svg/: Cargo.toml
crates/mermaid-svg/src/: class.rs  er.rs  flowchart.rs  gantt.rs  lib.rs  pie.rs  sequence.rs  state.rs  svg.rs
crates/mermaid-svg/tests/: integration.rs
crates/sugiyama/: Cargo.toml
crates/sugiyama/src/: coord.rs  cycle.rs  layer.rs  lib.rs  order.rs  route.rs  work.rs
crates/sugiyama/tests/: integration.rs
docs/: architecture.md
docs/architecture/: architecture.md  block.md  c4.md  class.md  er.md  flowchart.md  gantt.md  gitgraph.md  journey.md  kanban.md  mindmap.md  packet.md  pie.md  quadrant.md  radar.md  requirement.md  sankey.md  sequence.md  state.md  timeline.md  treemap.md  xychart.md  zenuml.md
examples/: gen-doc-diagrams.rs  render_user.rs
samples/: block.mmd  er.mmd  gantt.mmd  kanban.mmd  mindmap.mmd  packet.mmd  pie.mmd  radar.mmd  requirement.mmd  sankey.mmd  sequence.mmd  state.mmd  timeline.mmd  zenuml.mmd
src/: lib.rs
src/parse/: architecture.rs  ast.rs  block.rs  c4.rs  class.rs  er.rs  flowchart.rs  gantt.rs  gitgraph.rs  journey.rs  kanban.rs  mindmap.rs  mod.rs  packet.rs  pie.rs  preamble.rs  quadrant.rs  radar.rs  requirement.rs  sankey.rs  sequence.rs  state.rs  style.rs  tests.rs  timeline.rs  token.rs  treemap.rs  xychart.rs  zenuml.rs
src/sugiyama/: coord.rs  cycle.rs  layer.rs  mod.rs  order.rs  route.rs  tests.rs  work.rs
src/svg/: architecture.rs  block.rs  builder.rs  c4.rs  class.rs  color.rs  decorate.rs  er.rs  flowchart.rs  gantt.rs  gantt_date.rs  geometry.rs  gitgraph.rs  interact.rs  journey.rs  kanban.rs  label.rs  (+18 more)
tests/: integration.rs
(+159 files in other folders)
