[workspace]
resolver = "2"
members = ["crates/sugiyama", "crates/mermaid-parse", "crates/mermaid-svg"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sourcelab/mermaid-rs"

[workspace.dependencies]
petgraph = "0.6"
thiserror = "1"
