[package]
name = "mermaid-svg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Render Mermaid diagrams to SVG (subset: pie, sequence)"

[dependencies]
mermaid-parse = { path = "../mermaid-parse" }
sugiyama = { path = "../sugiyama" }
thiserror = { workspace = true }
