[package]
name = "sugiyama"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sugiyama-style layered graph layout (longest-path ranking, barycenter ordering, Brandes-Köpf coordinates)"

[dependencies]
petgraph = { workspace = true }
thiserror = { workspace = true }
